--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react-cookies": "^0.1.1",
     "react-dom": "^18.1.0",
     "react-draft-wysiwyg": "github:jpuri/react-draft-wysiwyg#pull/1245/head",
+    "react-helmet": "^6.1.0",
     "react-moment": "^1.1.2",
     "react-redux": "^8.0.1",
     "react-router-bootstrap": "^0.26.1",
